# impurityModel

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  env.sh  impmod_interface.c  impmod_interface.h  impmod_interface.py  library_builder.py  pyproject.toml  pytest.ini  requirements.in  setup.cfg  setup.py
.github/workflows/: lint.yml  tests.yml
doc/: architecture_overview.md  basis_and_restrictions.md  configuration.md  gf_solver_architecture.md  greens_function_theory.md  ground_state_report.md  index.rst  intro.rst  mpi_model.md  user_guide.md
doc/plans/: README.md  apply_perf_deferred_designs.md  bicgstab_per_frequency_gf.md  blocklanczos_blas_acceleration.md  blocklanczos_hotloop_hardening.md  blocklanczos_partial_perf_memory.md  blocklanczos_reort_memory.md  blocklanczos_reort_reliability.md  calc_selfenergy_performance.md  deep_refactor.md  deflation_scale_invariance.md  distributed_irlm_groundstate_mpi.md  ea16_irlm_implementation.md  gf_cipsi_frequency_truncation.md  gf_distribution_unification.md  irlm_cipsi_evaluation.md  manybodyoperator_apply_performance.md  manybodystate_block_unification.md  nonabelian_symmetry_casimir.md  restrictions_redux.md  rixs_r2_performance.md  spectrum_slicing.md  symmetry_implementation_plan.md  symmetry_plan_review.md  truncation_reliability.md  tsqr.md
doc/sphinx/: Makefile  conf.py
docs/: impurityModel.ed.rst
impurityModel/ed/: ac.pyx  ac_test.py  average.py  cg.c  cg.py  create.py  edchain.py  finite.py  get_spectra.py  get_spectra_using_CF.py  greens_function.py  hermitian_operator.py  hermitian_operator_matmul.pyx  identity.py  krylovBasis.py  lanczos.py  lanczos_test.py  manybody_basis.py  manybody_basis_test.py  manybody_state_containers.py  mpi_comm.py  op_parser.py  product_state_representation.py  remove.py  selfenergy.py  spectra.py
impurityModel/plotScripts/: plotRIXS.py  plotSpectra.py
impurityModel/test/: test_comparison_with_reference.py
scripts/: run_Co_CoO_CF.sh  run_Fe_FeO_CF.sh  run_Mn_MnO_CF.sh  run_Ni_NiO_50p10bath.sh  run_Ni_NiO_CF.sh  run_Ni_NiO_Xbath.sh
src/cython/: .clang-tidy  BiCGSTAB.pyx  BlockLanczos.pxd  BlockLanczos.pyx  BlockLanczosArray.pyx  ChebyshevFilter.pyx  GMRES.pyx  ManyBodyBlockState.h  ManyBodyBlockState.pxd  ManyBodyOperator.cpp  ManyBodyOperator.h  ManyBodyOperator.pxd  ManyBodyState.cpp  ManyBodyState.h  ManyBodyState.pxd  ManyBodyUtils.cpp  ManyBodyUtils.pyx  MpiUtils.cpp  MpiUtils.h  MpiUtils.pxd  SlaterDeterminant.h  SlaterDeterminant.pxd  TSQR.pyx  _block_state.pxi  _irlm.pxi  _krylov_store.pxi  _lanczos_step.pxi  _mpi_pack.pxi  _operator.pxi  _reort.pxi  _slater_state.pxi  _trlm.pxi  flat_map.pxd  flat_map_wrapper.hpp  perf.cpp  test_cpp_compile.cpp
src/impurityModel/: __init__.py  __main__.py  api.py
src/impurityModel/ed/: ManyBodyOperator.cpp  ManyBodyOperator.h  ManyBodyOperator.pxd  ManyBodyState.cpp  ManyBodyState.h  ManyBodyState.pxd  ManyBodyUtils.cpp  ManyBodyUtils.pyx  __init__.py  atomic_physics.py  average.py  basis_generation.py  basis_restrictions.py  basis_split.py  basis_transcription.py  bath_fitting.py  block_math.py  block_structure.py  cg.py  chebyshev_filter.py  cipsi_solver.py  config.py  create.py  density_matrix.py  double_counting.py  ea16.py  edchain.py  eigensolvers.py  finite.py  get_spectra.py  get_spectra_using_CF.py  gf_convergence.py  gf_diagnostics.py  gf_primitives.py  gf_shift_recycling.py  gf_solvers.py  gf_units.py  givens_qr.py  gmres.py  greens_function.py  (+33 more)
src/impurityModel/ed/double_chain_haverkort/: double_chains.py
src/impurityModel/plotScripts/: plotRIXS.py  plotSpectra.py
src/impurityModel/scripts/: _plot_common.py  build_h0.py  cli.py  plot_RIXS.py  plot_spectra.py  selfenergy.py  spectra.py  susceptibility.py
src/impurityModel/test/: ManyBodyUtils_test.py  _nio_workload.py  ac_test.py  apply_perf_golden.json  conftest.py  lanczos_test.py  manybody_basis_test.py  real_workload.py  restriction_diagnostics.py  restriction_sweep.py  symmetry_golden.json  test_apply.py  test_apply2.py  test_applyOp.py  test_apply_perf.py  test_array_irlm.py  test_array_lanczos_oracle.py  test_atomic_physics.py  test_basis_rotation.py  test_basis_storage.py  test_bath_fitting.py  test_bicgstab_perf.py  test_block_lanczos_array_empty_rank.py  test_block_lanczos_blowup.py  test_block_lanczos_cy.py  test_block_lanczos_cy_mpi.py  test_block_lanczos_mbs_empty_rank.py  test_block_lanczos_perf.py  test_block_lanczos_reort_matrix.py  test_block_state.py  test_block_structure.py  test_block_structure_consistency.py  test_cg.py  test_chebyshev_filter.py  test_cipsi_determinism.py  test_cipsi_truncation.py  test_cli.py  test_comparison_with_reference.py  test_component_reduction.py  test_create.py  (+90 more)
src/impurityModel/test/basis/: test_basis_storage.py  test_memory_estimate.py
src/impurityModel/test/block_structure/: test_block_structure.py  test_block_structure_consistency.py  test_impurity_block_structure.py
src/impurityModel/test/gf/: test_gf_bicgstab_driver.py  test_gf_diagnostics.py  test_gf_eval_mesh.py  test_gf_moments.py  test_gf_offdiag_rotation.py  test_gf_shift_recycling.py  test_gf_truncation.py  test_gf_units.py  test_greens_function.py  test_selfenergy_end_to_end.py  test_selfenergy_perf.py
src/impurityModel/test/lanczos/: test_block_lanczos_array_empty_rank.py  test_block_lanczos_blowup.py  test_block_lanczos_cy.py  test_block_lanczos_reort_matrix.py  test_deflation_scale_invariance.py  test_eigensolvers.py  test_krylov_dtype.py  test_no_ghost_bands.py  test_restart_pro.py  test_selective_reort.py  test_slicing_probe.py  test_trlm_restart_widths.py  test_tsqr.py  test_warm_restart_refines.py
src/impurityModel/test/linear_solvers/: test_cg.py  test_gmres.py
src/impurityModel/test/misc/: test_cli.py  (+4 more)
(+24 files in other folders)
