[project]
name = "impurityModel"
description = "Package for solving the Anderson impurity model."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme="README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
"bitarray",
"black",
"flake8",
"flake8-bugbear",
"flake8-comprehensions",
"pep8-naming",
"h5py",
"matplotlib",
"mpi4py",
"numpy>2.0.0",
"numpydoc",
"pytest",
"pytest-mpi",
"sympy",
"scipy",
"sphinx",
"sphinx-rtd-theme",
"flake8-return",
"pylint",
"rspt2spectra @ git+https://github.com/johanjoensson/rspt2spectra.git"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/johanjoensson/impurityModel/"
Issues = "https://github.com/johanjoensson/impurityModel//issues"


[build-system]
# scipy is a build-time dependency: BlockLanczosArray.pyx does
# `from scipy.linalg.cython_blas cimport zgemm`, so Cython needs scipy's
# cython_blas.pxd present when compiling (not just at runtime).
requires = ["setuptools >= 77.0.3", "setuptools-scm", "cython", "numpy", "scipy"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project.scripts]
plot_RIXS="impurityModel.scripts.plot_RIXS:main"
build_h0="impurityModel.scripts.build_h0:main"

[tool.coverage.run]
# Record source paths relative to the repo root. Without this, an editable
# `src/` install records absolute paths (/home/runner/work/...), which Coveralls
# cannot map back to the repository and ends up reporting empty/incorrect coverage.
relative_files = true

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

lint.select = ["E", "F", "B", "C4", "PL", "A", "SIM", "RUF", "PGH", "I"]

lint.ignore = ["B905", "PLR2004", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "SIM105","RUF005", "PGH003", "C408", "SIM118", "E741", "PLR5501"]
