[project]
name = "impurityModel"
description = "Package for solving the Anderson impurity model."
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme="README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
"bitarray",
"h5py",
"matplotlib",
"mpi4py",
"numpy>2.0.0",
"scipy",
"sympy",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "cython-lint",
    "mypy",
    "pytest",
    "pytest-mpi",
    "ruff",
]
doc = [
    "myst-parser",
    "numpydoc",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/johanjoensson/impurityModel/"
Issues = "https://github.com/johanjoensson/impurityModel//issues"


[build-system]
# scipy is a build-time dependency: BlockLanczosArray.pyx does
# `from scipy.linalg.cython_blas cimport zgemm`, so Cython needs scipy's
# cython_blas.pxd present when compiling (not just at runtime).
requires = ["setuptools >= 77.0.3", "setuptools-scm", "cython", "numpy", "scipy"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project.scripts]
plot_RIXS="impurityModel.scripts.plot_RIXS:main"

[tool.coverage.run]
# Record source paths relative to the repo root. Without this, an editable
# `src/` install records absolute paths (/home/runner/work/...), which Coveralls
# cannot map back to the repository and ends up reporting empty/incorrect coverage.
relative_files = true

[tool.black]
line-length = 120
# Pin the target so Black's output is deterministic regardless of the running
# interpreter. Without this, Black auto-detects a newer Python and warns that the
# CI interpreter "cannot parse code formatted for Python 3.x". CI runs 3.11.
target-version = ["py311"]

[tool.cython-lint]
# Match Black's line length so long lines aren't flagged against the 88 default.
max-line-length = 120
# E501: long lines are still reported by max-line-length above for genuinely long
#       code, but we don't enforce wrapping (e.g. the `# cython:` directive line
#       and long cdef signatures can't be wrapped). E741: ambiguous names like `O`
#       are already ignored for Python (see [tool.ruff] lint.ignore).
ignore = ["E501", "E741"]

[tool.ruff]
line-length = 120

lint.select = ["E", "F", "B", "C4", "PL", "A", "SIM", "RUF", "PGH", "I"]

lint.ignore = ["B905", "PLR2004", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "SIM105","RUF005", "PGH003", "C408", "SIM118", "E741", "PLR5501"]
